--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://www.tooplate.com/view/2095-level
 </li>
 
                                   <li class="nav-item">
-                                    <a class="nav-link" href="#tm-section-6">Contact</a>
+                                    <a class="nav-link" href="#tm-section-6">Contactt</a>
                                   </li>
                                 </ul>
                             </div>                            
@@ -257,7 +257,7 @@ https://www.tooplate.com/view/2095-level
                         <div style="position:relative; width:100%; padding-top:55%;"> <!-- hauteur modérée -->
                             <iframe 
                                 title="Dashboard Import-Export" 
-                                src="https://app.powerbi.com/reportEmbed?reportId=bc7e960d-4991-4939-90c6-8aca0f9f95a4&autoAuth=true&ctid=604f1a96-cbe8-43f8-abbf-f8eaf5d85730" 
+                                 src="https://app.powerbi.com/reportEmbed?reportId=49a00a09-6804-4222-9150-543ca208f9ac&autoAuth=true&ctid=604f1a96-cbe8-43f8-abbf-f8eaf5d85730"
                                 frameborder="0" 
                                 allowFullScreen 
                                 style="position:absolute; top:0; left:0; width:100%; height:100%; border-radius:0.75rem;">
