--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://www.tooplate.com/view/2095-level
 </li>
 
                                   <li class="nav-item">
-                                    <a class="nav-link" href="#tm-section-6">Contactt</a>
+                                    <a class="nav-link" href="#tm-section-6">Contact</a>
                                   </li>
                                 </ul>
                             </div>                            
